<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchoolDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back_icon" />

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:maxLines="1"-->
        <!--            android:gravity="center"-->
        <!--            android:textSize="20dp"-->
        <!--            android:text="@string/app_name"-->
        <!--            android:textColor="@android:color/white" />-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/school_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/overview_paragraph"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/overview_paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineHeight="15dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/website"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ell_programs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/ell_programs"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>